Fix header alignment for smallest screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,6 +393,7 @@ footer {
 @media screen and (max-width: 600px) {
     header {
         display: flex;
+        align-items: center;
     }
 
     .title {
@@ -499,6 +500,7 @@ footer {
         display: block;
         margin-right: 0;
         font-size: 90%;
+        margin-left:0;
     }
 
     .navigation ul {
@@ -509,4 +511,22 @@ footer {
         margin-left: 10px;
         margin-right: 5px;
     }
+
+
+}
+/* JioPhone 2 and iphone 4 */
+@media screen and (max-width: 240px) {
+
+    body {
+
+        font-size: 80%;
+    }
+
+    .navigation li {
+        margin-left: 7px;
+        margin-right: 0;
+        font-size: 70%;
+    }
+
+
 }
